# paper2video

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-04-08-paper2video.md
space/: README.md  app.py  packages.txt  requirements.txt
src/paper2video/: __init__.py  assemble.py  captions.py  cli.py  ingest.py  llm.py  pipeline.py  publish.py  qa.py  research.py  review.py  script.py  social.py  store.py  tts.py  types.py  validate.py  watchers.py
src/paper2video/publishers/: __init__.py  _oauth.py  instagram.py  tiktok.py  youtube.py
src/paper2video/renderers/: __init__.py  base.py  manim_r.py  slide.py
tests/: conftest.py  test_assemble.py  test_cli.py  test_ingest.py  test_llm.py  test_manim_renderer.py  test_pipeline.py  test_research.py  test_script.py  test_slide_renderer.py  test_social.py  test_store.py  test_tts.py  test_types.py  test_watchers.py
tests/fixtures/: sample_article.html
tests/test_publishers/: test_oauth.py  test_registry.py
